editors/tree-sitter-replique/test/corpus/lines.txt
================================================================================
Node with dialogue
================================================================================

:= start
Alice: Hi! How are you?
Just a narration line.
---

--------------------------------------------------------------------------------

(source_file
  (node_start
    (node_name (identifier)))
  (say
    (speaker)
    (text
      (text_chunk)))
  (say
    (text
      (text_chunk)))
  (node_end))

================================================================================
Choices and jumps
================================================================================

-> Good luck then!
=> meeting

--------------------------------------------------------------------------------

(source_file
  (choice
    (text
      (text_chunk)))
  (jump
    (node_name (identifier))))

================================================================================
Commands
================================================================================

>> play("bell", 0.5, true)

--------------------------------------------------------------------------------

(source_file
  (command
    (call
      (function_name (identifier))
      (string)
      (number)
      (boolean))))

================================================================================
Awaited commands
================================================================================

>> await play_anim("wave")
>> awaited_thing()

--------------------------------------------------------------------------------

(source_file
  (command
    (call
      (function_name (identifier))
      (string)))
  (command
    (call
      (function_name (identifier)))))

================================================================================
Conditionals and assignment
================================================================================

[let $gold = $gold + 1]
[if $gold > 5 and not $poor]
[elif true]
[else]

--------------------------------------------------------------------------------

(source_file
  (let_statement
    (variable)
    (binary_expression
      (variable)
      (number)))
  (if_statement
    (binary_expression
      (binary_expression
        (variable)
        (number))
      (unary_expression
        (variable))))
  (elif_statement
    (boolean))
  (else_statement))

================================================================================
Comments
================================================================================

// a comment
Alice: Hi // trailing

--------------------------------------------------------------------------------

(source_file
  (comment)
  (say
    (speaker)
    (text
      (text_chunk)))
  (comment))

================================================================================
Loops
================================================================================

[while $gold < 5]
[break]
[continue]

--------------------------------------------------------------------------------

(source_file
  (while_statement
    (binary_expression
      (variable)
      (number)))
  (break_statement)
  (continue_statement))

================================================================================
Inline expressions
================================================================================

Alice: Bonjour [$nom], il te reste [$joueur.pv] points.
[$nom] ouvre la porte.
-> Payer [$argent * 100] centimes

--------------------------------------------------------------------------------

(source_file
  (say
    (speaker)
    (text
      (text_chunk)
      (interpolation
        (variable))
      (text_chunk)
      (interpolation
        (attribute_expression
          (variable)
          (attribute)))
      (text_chunk)))
  (say
    (text
      (interpolation
        (variable))
      (text_chunk)))
  (choice
    (text
      (text_chunk)
      (interpolation
        (binary_expression
          (variable)
          (number)))
      (text_chunk))))
