editors/tree-sitter-replique/test/corpus/tags.txt
================================================================================
Tags at both ends of a line
================================================================================

Alice: #angry I am angry #sound:alice_01

--------------------------------------------------------------------------------

(source_file
  (say
    (speaker)
    (text
      (tag)
      (text_chunk)
      (tag))))

================================================================================
A tag with a value is not a speaker
================================================================================

#mood:angry I am angry
Je suis #mood:angry

--------------------------------------------------------------------------------

(source_file
  (say
    (text
      (tag)
      (text_chunk)))
  (say
    (text
      (text_chunk)
      (tag))))

================================================================================
A line made of tags
================================================================================

Alice: #silence
#a #b

--------------------------------------------------------------------------------

(source_file
  (say
    (speaker)
    (text
      (tag)))
  (say
    (text
      (tag)
      (tag))))

================================================================================
Tags around an inline expression
================================================================================

Alice: #salut Bonjour [$nom] ! #volume:0.5

--------------------------------------------------------------------------------

(source_file
  (say
    (speaker)
    (text
      (tag)
      (text_chunk)
      (interpolation
        (variable))
      (text_chunk)
      (tag))))

================================================================================
Tags on a choice
================================================================================

-> #hostile Attaquer #cost:3

--------------------------------------------------------------------------------

(source_file
  (choice
    (text
      (tag)
      (text_chunk)
      (tag))))

================================================================================
A hash that opens no tag is text
================================================================================

Agent #2: We are #1 in C# and F#sharp
Alice: \#angry is trending
Bob: Salut. // #not a tag

--------------------------------------------------------------------------------

(source_file
  (say
    (speaker)
    (text
      (text_chunk)))
  (say
    (speaker)
    (text
      (text_chunk)))
  (say
    (speaker)
    (text
      (text_chunk)))
  (comment))
